--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>jquery</title>
+    <title>Simon-Game</title>
     <link rel="shortcut icon" href="img/dg6.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--bootsrap-->
