--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <!--main contents-->
     <section>
-    <h1 id="level-title">Presh Space to Start The Game or click on play button</h1>
+    <h1 id="level-title">Presh Space to Start The Game or click on play button (mobile)</h1>
     <div class="container">
   <div class="row row-cols-2">
     <div class="col"><img src="img/dg1.svg" alt="red" id="red" class="btn red"/></div>
